All_Component_DX/force-app/main/default/objects/Service_Zone__c/Service_Zone__c.object-meta.xml
<CustomObject>
    <description>Represent the OptiMax zone definition for Territory.</description>
    <label>Service Zone</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Zones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>