All_Component_DX/force-app/main/default/objects/Service_Zone__c/fields/Zone_Definition__c.field-meta.xml
<CustomField>
    <fullName>Zone_Definition__c</fullName>
    <description>Layout information stored as a JSON format.</description>
    <label>Zone Definition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>