All_Component_DX/force-app/main/default/objects/Service_Zone__c/fields/Zone_Name__c.field-meta.xml
<CustomField>
    <fullName>Zone_Name__c</fullName>
    <description>Zone name</description>
    <label>Zone Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>