All_Component_DX/force-app/main/default/objects/Service_Zone__c/fields/Zone_Type__c.field-meta.xml
<CustomField>
    <fullName>Zone_Type__c</fullName>
    <label>Zone Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Polygon</fullName>
            </value>
            <value>
                <fullName>Circle</fullName>
            </value>
            <value>
                <fullName>Rectangle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>